[gd_scene load_steps=6 format=3 uid="uid://dunv5t36t51ud"]

[ext_resource type="Texture2D" uid="uid://bamggcjgdgobm" path="res://arts/PNG/Lasers/laserBlue01.png" id="1_a85iw"]
[ext_resource type="Script" uid="uid://dtjbv3e81h8ja" path="res://projectile.gd" id="1_qxf0c"]
[ext_resource type="AudioStream" uid="uid://jlogyno724xd" path="res://audio/alienshoot1.wav" id="3_dgwo2"]
[ext_resource type="AudioStream" uid="uid://dpujrxeq514my" path="res://audio/shoot_impact.mp3" id="4_sxmqc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a85iw"]
radius = 3.0

[node name="Projectile" type="Area2D"]
script = ExtResource("1_qxf0c")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_a85iw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 1.6)
shape = SubResource("CapsuleShape2D_a85iw")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dgwo2")

[node name="ImpactSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_sxmqc")
volume_db = -7.429

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
